--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,10 @@
 window.onload = main
 
 function main() {
-    d3.json('http://localhost:5000/api/test', d => {
+    d3.json('http://localhost:5000/api/countries', d => {
         console.log(d)
     })
 }
-
 
 </script>
 
